# YouTubeCommentAutomator

./: app.py  config.py  forms.py  google_auth.py  main.py  models.py  pyproject.toml  requirements.txt  views.py
migrations/versions/: ed553efa9f60_add_moderation_fields.py
static/css/: custom.css  style.css
static/js/: script.js
templates/: base.html  comment_reply.html  dashboard.html  history.html  index.html  login.html  oauth_setup.html  register.html  settings.html  verify_channel.html
utils/: email_service.py  gemini_api.py  youtube_api.py
